# contextsmith

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  GROUP_A_PROGRESS.md  IMPLEMENTATION_RESULTS.md  LICENSE-APACHE  LICENSE-MIT  PRD.md  README.md  plan.md  spec.md  tasks.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-drafter.yml
src/: cli.rs  config.rs  error.rs  git.rs  indexer.rs  lib.rs  main.rs  manifest.rs  output.rs  ranker.rs  scanner.rs  slicer.rs  symbols.rs  tokens.rs  utils.rs
src/commands/: collect.rs  diff.rs  explain.rs  init.rs  mod.rs  pack.rs  stats.rs
tests/: cli_tests.rs
